[package]
name = "async-tar"
version = "0.1.1"
authors = ["dignifiedquire <me@dignifiequire.com>", "Alex Crichton <alex@alexcrichton.com>"]
homepage = "https://github.com/dignifiedquire/async-tar"
repository = "https://github.com/dignifiedquire/async-tar"
documentation = "https://docs.rs/async-tar"
license = "MIT/Apache-2.0"
keywords = ["tar", "tarfile", "encoding"]
readme = "README.md"
edition = "2018"
exclude = ["tests/archives/*"]

description = """
A Rust implementation of an async TAR file reader and writer. This library does not
currently handle compression, but it is abstract over all I/O readers and
writers. Additionally, great lengths are taken to ensure that the entire
contents are never required to be entirely resident in memory all at once.
"""

[dependencies]
pin-project = "0.4.6"
futures="0.3"
